--- a/packages/ui/styles/tsconfig.json
+++ b/packages/ui/styles/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["components"],
+  "include": ["."],
   "exclude": ["node_modules", "dist"]
 }
