chore: add pnpm scripts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
+    "build:api": "turbo build --filter=api",
+    "build:web": "turbo build --filter=web",
+    "build:db": "turbo build --filter=@repo/database",
     "dev": "turbo dev",
+    "dev:api": "turbo dev --filter=api",
+    "dev:web": "turbo dev --filter=web",
+    "dev:db": "turbo dev --filter=@repo/database",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "prepare": "husky"
