--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,10 +1,9 @@
 {
   "name": "web",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3000",
+    "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start --port 3000",
     "lint": "next lint --max-warnings 0",
@@ -23,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/next-plugin": "^2.4.10",
     "typescript": "5.5.4"
   }
