--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
-  "name": "yyoooonn_mono",
+  "name": "mono",
   "private": true,
   "scripts": {
     "build": "turbo build",
+    "build:api": "turbo build --filter=api",
+    "build:web": "turbo build --filter=web",
+    "build:db": "turbo build --filter=@repo/database",
+    "build:test": "turbo build --filter=test",
     "dev": "turbo dev",
+    "dev:api": "turbo dev --filter=api",
+    "dev:web": "turbo dev --filter=web",
+    "dev:test": "turbo dev --filter=test",
+    "dev:db": "turbo dev --filter=@repo/database",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "pnpm format"
+    ]
   },
   "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
     "prettier": "^3.2.5",
     "turbo": "^2.3.3",
     "typescript": "5.5.4"
