--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@repo/ui",
   "version": "0.0.0",
-  "type": "module",
   "private": true,
   "exports": {
-    "./button": "./src/button.tsx",
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./components": "./src/*.tsx",
+    "./styles": "./styles/index.ts"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -20,9 +18,11 @@
     "@types/node": "^20.11.24",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
+    "@vanilla-extract/css": "^1.17.1",
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
