--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
-    "build:api": "turbo build --filter=api",
-    "build:web": "turbo build --filter=web",
-    "build:db": "turbo build --filter=@repo/database",
-    "build:test": "turbo build --filter=test",
     "dev": "turbo dev",
-    "dev:api": "turbo dev --filter=api",
-    "dev:web": "turbo dev --filter=web",
-    "dev:test": "turbo dev --filter=test",
-    "dev:db": "turbo dev --filter=@repo/database",
-    "lint": "turbo lint",
+    "db:migrate:deploy": "turbo run db:migrate:deploy",
+    "db:migrate:dev": "turbo run db:migrate:dev",
+    "db:push": "turbo run db:push",
+    "db:seed": "turbo run db:seed",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "generate": "turbo run generate",
+    "lint": "turbo run lint",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -22,6 +19,7 @@
     ]
   },
   "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "prettier": "^3.2.5",
