--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
     "db:migrate:deploy": "turbo run db:migrate:deploy",
     "db:migrate:dev": "turbo run db:migrate:dev",
     "db:push": "turbo run db:push",
     "db:seed": "turbo run db:seed",
+    "db:up": "docker-compose up -d",
+    "db:ready": "sleep 5 && pnpm turbo run db:migrate:dev",
+    "db:down": "docker-compose down",
+    "env:sync": "chmod +x scripts/* && ./scripts/env-sync.sh",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "dev": "pnpm db:up && pnpm db:ready && turbo dev",
     "generate": "turbo run generate",
     "lint": "turbo run lint",
     "prepare": "husky"
