--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "db:migrate:dev": "turbo run db:migrate:dev",
     "db:push": "turbo run db:push",
     "db:seed": "turbo run db:seed",
-    "db:up": "docker-compose up -d",
-    "db:ready": "sleep 5 && pnpm turbo run db:migrate:dev",
-    "db:down": "docker-compose down",
-    "env:sync": "chmod +x scripts/* && ./scripts/env-sync.sh",
+    "db:up": "docker-compose -f docker-compose.db.yml up -d",
+    "db:ready": "sleep 5 && pnpm db:migrate:dev",
+    "db:down": "docker-compose -f docker-compose.db.yml down",
+    "env:sync": "chmod +x scripts/env-sync.sh && ./scripts/env-sync.sh",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-    "dev": "pnpm db:up && pnpm db:ready && turbo dev",
+    "dev": "chmod +x scripts/dev-with-cleanup.sh && ./scripts/dev-with-cleanup.sh",
     "generate": "turbo run generate",
+    "codegen": "turbo run codegen",
     "lint": "turbo run lint",
     "prepare": "husky"
   },
