chore: turbo setup, bff, shared

--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "back",
+  "name": "bff",
   "version": "1.0.0",
-  "description": "",
+  "description": "bff server, express + apollo server",
   "private": "true",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsup src/index.ts --format esm,cjs --dts --out-dir dist",
-    "start": "pnpm build && node ./dist/index.js"
+    "dev": "tsx watch src/app.ts",
+    "build": "tsup",
+    "start": "pnpm build && node ./dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/shared": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.14.0",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@repo/shared": "workspace:*",
     "@apollo/server": "^4.11.3",
     "@graphql-tools/load-files": "^7.0.1",
     "@graphql-tools/merge": "^9.0.24",
+    "express": "^4.21.2",
     "graphql": "^16.10.0"
   }
 }
