--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "mono",
   "private": true,
   "scripts": {
-    "build": "turbo build",
+    "build": "pnpm env:sync && turbo run build",
+    "build:web": "pnpm env:sync && turbo run build --filter=web...",
     "db:migrate:deploy": "turbo run db:migrate:deploy",
     "db:migrate:dev": "turbo run db:migrate:dev",
     "db:push": "turbo run db:push",
     "db:seed": "turbo run db:seed",
-    "db:up": "docker-compose -f docker-compose.db.yml up -d",
     "db:ready": "sleep 5 && pnpm db:migrate:dev",
-    "db:down": "docker-compose -f docker-compose.db.yml down",
+    "db:up": "docker-compose -f docker-compose.dev.yml --profile db up -d",
+    "db:down": "docker-compose -f docker-compose.dev.yml --profile db down",
     "env:sync": "chmod +x scripts/env-sync.sh && ./scripts/env-sync.sh",
-    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-    "dev": "chmod +x scripts/dev-with-cleanup.sh && ./scripts/dev-with-cleanup.sh",
+    "dev": "turbo run dev",
+    "dev:all": "chmod +x scripts/dev-with-cleanup.sh && ./scripts/dev-with-cleanup.sh",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml --profile test up --build",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml --profile prod up --build",
     "generate": "turbo run generate",
     "codegen": "turbo run codegen",
+    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "lint": "turbo run lint",
+    "start": "turbo run start",
     "prepare": "husky"
   },
   "lint-staged": {
