--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,8 +1,16 @@
 {
   "name": "@repo/shared",
   "version": "0.0.1",
+  "type": "module",
+  "exports": {
+    "./graphql": "./dist/index.js",
+    "./graphql/generated/types": "./graphql/generated/types.js",
+    "./graphql/schema": "./dist/schema"
+  },
   "scripts": {
-    "codegen": "graphql-codegen --config codegen.ts"
+    "build": "tsc && pnpm copy-graphql",
+    "copy-graphql": "cp -rp ./graphql/operations ./dist/ && cp -rp ./graphql/schema ./dist/",
+    "codegen": "graphql-codegen --config ./graphql/codegen.ts"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.0.0",
@@ -11,7 +19,15 @@
     "@graphql-codegen/typescript-operations": "^3.0.0",
     "@graphql-codegen/typescript-react-apollo": "^3.0.0",
     "@graphql-codegen/typescript-resolvers": "^3.0.0",
+    "@graphql-tools/load-files": "^7.0.1",
+    "@graphql-tools/merge": "^9.0.24",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@repo/typescript-config": "workspace:*",
+    "graphql-tag": "^2.12.6",
+    "tsup": "^8.4.0",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "graphql": "^16.10.0"
   }
 }
