--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -7,7 +7,7 @@
     "outDir": "dist",
     "baseUrl": ".",
     "declaration": true,
-    "declarationDir": "./dist/types",
+    "declarationDir": "./dist/types"
   },
   "include": ["./graphql"],
   "exclude": ["node_modules", "dist"]
